# rust-ai-runtime

./: .gitignore  Cargo.toml  README.md
assets/models/: markov_corpus.txt  rules.json
config/: settings.toml
examples/: prompts.txt
src/: cli.rs  config.rs  demo.rs  history.rs  lib.rs  main.rs  model.rs  runtime.rs  tokenizer.rs  tui.rs  utils.rs
src/inference/: context.rs  engine.rs  mod.rs  traits.rs
src/inference/models/: markov.rs  mod.rs  rule_based.rs
src/scheduler/: mod.rs  pool.rs  queue.rs  task.rs  worker.rs
tests/: engine_test.rs  model_test.rs  tokenizer_test.rs
