[package]
name = "rust-ai-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.11"
log = "0.4"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
